--- a/USAGE_DATA.adoc
+++ b/USAGE_DATA.adoc
@@ -27,3 +27,5 @@ Disable::
 `odo preference set ConsentTelemetry false`
 
 Note: If earlier the `ConsentTelemetry` preference was enabled, then the data will be collected about the disabling of the preference.
+
+Alternatively you can disable telemetry by setting `ODO_DISABLE_TELEMETRY` environment variable to `false`.
