add info about ODO_DISABLE_TELEMETRY overriding preference

--- a/USAGE_DATA.adoc
+++ b/USAGE_DATA.adoc
@@ -29,3 +29,4 @@ Disable::
 Note: If earlier the `ConsentTelemetry` preference was enabled, then the data will be collected about the disabling of the preference.
 
 Alternatively you can disable telemetry by setting `ODO_DISABLE_TELEMETRY` environment variable to `true`.
+This environment can override `ConsentTelemetry` value set by `odo preference`. 
