Fixing spelling of storage in doc
Signed-off-by: Mohammed Zeeshan Ahmed <mohammed.zee1000@gmail.com>

--- a/docs/public/using-storage.adoc
+++ b/docs/public/using-storage.adoc
@@ -79,7 +79,7 @@ Here, we have 2 containers, with names `runtime` and `funtime`. To attach a stor
 
 ----
 
-You can list the same, using `odo stprage list` command
+You can list the same, using `odo storage list` command
 
 [source, sh]
 ----
