Adjust SBO link and fix broken relative links to other articles
Signed-off-by: Scott Kurz <skurz@us.ibm.com>

--- a/docs/public/operators-on-minikube.adoc
+++ b/docs/public/operators-on-minikube.adoc
@@ -100,4 +100,4 @@ Once the pod for this `CatalogSource` is up, wait a few seconds before trying to
 
 === Installing the Service Binding Operator
 
-Service Binding Operator is used by odo to provide `odo link` feature. Please refer link:install-service-binding-operator.adoc[this document] to install it on both OpenShift and Kubernetes. 
+Service Binding Operator is used by odo to provide `odo link` feature. Please refer to link:https://odo.dev/docs/install-service-binding-operator.adoc[this document] to install it on both OpenShift and Kubernetes.
