--- a/docs/public/breaking-changes-in-odo-2.2.adoc
+++ b/docs/public/breaking-changes-in-odo-2.2.adoc
@@ -5,9 +5,8 @@ With the increased adoptation of https://devfile.github.io/[Devfiles] we have st
 
 As part of that effort the primary change that has happened is 
 
-. `odo create --s2i <component-type>` would create a converted Devfile based component on the S2I images of that component type.
+* `odo create --s2i <component-type>` would create a converted Devfile based component on the S2I images of that component type.
 
-+
 [source,sh]
 ----
 odo create --s2i nodejs
@@ -15,7 +14,6 @@ odo create --s2i nodejs
 
 Output - 
 
-+
 [source,sh]
 ----
 odo create nodejs --s2i
@@ -29,8 +27,8 @@ Please use `odo push` command to create the component with source deployed
 
 would generate a `devfile.yaml` which would be using the S2I images and variables that are part of the `nodejs`.
 
-. Currently devfile components do not support `--git` and `--binary` components hence we still use S2I component flow when a user wants to create them.
-+
+* Currently devfile components do not support `--git` and `--binary` components hence we still use S2I component flow when a user wants to create them.
+
 [source,sh]
 ----
 odo create java --s2i --git ./build.war
@@ -41,16 +39,16 @@ Please use `odo push` command to create the component with source deployed
 ----
 Note - observe there wasn't any conversion step involved here.
 
-. `odo env set DebugPort` wont work with converted devfile components, instead you would need to use `odo config set --env DEBUG_PORT`.
+* `odo env set DebugPort` wont work with converted devfile components, instead you would need to use `odo config set --env DEBUG_PORT`.
 
 . Currently the `wildfly` and `dotnet` component types are not working when converted. We have an issue open for this - https://github.com/openshift/odo/issues/4623 
 
 === Known bugs and limitations
 
-. https://github.com/openshift/odo/issues/4623
-. https://github.com/openshift/odo/issues/4615
-. https://github.com/openshift/odo/issues/4594
-. https://github.com/openshift/odo/issues/4593
+* https://github.com/openshift/odo/issues/4623
+* https://github.com/openshift/odo/issues/4615
+* https://github.com/openshift/odo/issues/4594
+* https://github.com/openshift/odo/issues/4593
 
 
 === Frequently asked questions
