--- a/docs/public/breaking-changes-in-odo-2.2.adoc
+++ b/docs/public/breaking-changes-in-odo-2.2.adoc
@@ -5,7 +5,7 @@ With the increased adoptation of https://devfile.github.io/[Devfiles] we have st
 
 As part of that effort the primary change that has happened is 
 
-* `odo create --s2i <component-type>` would create a converted Devfile based component on the S2I images of that component type.
+* *`odo create --s2i <component-type>` would create a converted Devfile based component on the S2I images of that component type.*
 
 [source,sh]
 ----
@@ -27,7 +27,7 @@ Please use `odo push` command to create the component with source deployed
 
 would generate a `devfile.yaml` which would be using the S2I images and variables that are part of the `nodejs`.
 
-* Currently devfile components do not support `--git` and `--binary` components hence we still use S2I component flow when a user wants to create them.
+* *Currently devfile components do not support `--git` and `--binary` components hence we still use S2I component flow when a user wants to create them.*
 
 [source,sh]
 ----
@@ -39,7 +39,7 @@ Please use `odo push` command to create the component with source deployed
 ----
 Note - observe there wasn't any conversion step involved here.
 
-* `odo env set DebugPort` wont work with converted devfile components, instead you would need to use `odo config set --env DEBUG_PORT`.
+* *`odo env set DebugPort` wont work with converted devfile components, instead you would need to use `odo config set --env DEBUG_PORT`.*
 
 . Currently the `wildfly` and `dotnet` component types are not working when converted. We have an issue open for this - https://github.com/openshift/odo/issues/4623 
 
@@ -53,22 +53,22 @@ Note - observe there wasn't any conversion step involved here.
 
 === Frequently asked questions
 
-. Why odo create URL would fail as it is allowed for devfile ?
+* Why odo create URL would fail as it is allowed for devfile ?
 
 It won’t fail in the sense that if you tried the conventional s2i approach and try to create odo url create it would fail with url for 8080 port already present as there would already be one for you. issue - #4621
 
-. Is odo env --now and odo delete --wait permanent or temporary as we already have the issue for “normal” devfile components
+* Is odo env --now and odo delete --wait permanent or temporary as we already have the issue for “normal” devfile components
 
 Each and every change listed if they have an issue at the end of it will be fixed as a follow up e.g. #4594 for odo env and #4593 for odo delete
 
-.Not sure to understand the status of the debug
+* Not sure to understand the status of the debug
 
 odo env set DebugPort wont work, instead you would need to use odo config set --env DEBUG_PORT - this is because the s2i to devfile converted devfiles dont have a debug type command defined in them. We would fix this too.
 
-.So every component will now be reported as devfile component but what about existing S2I components
+* So every component will now be reported as devfile component but what about existing S2I components
 
 They should work as is mostly because I tried them and they work, maybe try odo list because that one is quite complex to work across the board.
 
-.If oc based checks are not going to work, is there an alternative odo support around it ?
+* If oc based checks are not going to work, is there an alternative odo support around it ?
 
 I wouldn't say you cannot use oc based checks but they would break because now s2i components being converted to devfile would generate a deployment but the oc would try to find a DeploymentConfig.
