Cleanin up release docs
Signed-off-by: Mohammed Zeeshan Ahmed <mohammed.zee1000@gmail.com>

--- a/docs/dev/development.adoc
+++ b/docs/dev/development.adoc
@@ -166,14 +166,14 @@ To release a new version on GitHub:
 
 There is a helper script link:/scripts/bump-version.sh[scripts/bump-version.sh] that changes version number in all the files listed above.
 
-Also, ensure you cut the version in the link:Changelog.md['Changelog.md'] i.e create a new version on top of current version.
+Also, ensure you add the next version on top of the current one in the link:/Changelog.md['Changelog.md'] so that it is clear that future changelog updates happen under next version.
 
 . Merge the above PR.
 . Once the PR is merged create and push the new git tag for the version.
 . Create a new release using the GitHub site (this must be a proper release and NOT a draft).
 +
 
-. Update the release description (changelog) on GitHub. Run the script below to get the baseline template of release changelog and then copy and paste the content from the link:Changelog.md['Changelog.md'] into appropriately marked location in generated `/tmp/changelog.md`.
+. Update the release description (changelog) on GitHub. Run the script below to get the baseline template of release changelog and then copy and paste the content from the link:/Changelog.md['Changelog.md'] into appropriately marked location in generated `/tmp/changelog.md`.
 +
 ----
 $ export GITHUB_TOKEN=yoursupersecretgithubtoken
