--- a/USAGE_DATA.adoc
+++ b/USAGE_DATA.adoc
@@ -13,6 +13,8 @@ If the user has consented to `odo` collecting usage data, the following data wil
 * OS type
 * `odo` version in use
 
+Note that these commands does not include `--help` commands. We do not collect data about help commands.
+
 ---
 [[enable-disable]]
 == Enable/Disable preference
